feat(auth): remove check register otp
